--- a/index.html
+++ b/index.html
@@ -22,6 +22,19 @@
             <input class="btn-limpar" onclick="limpar()" type="button" value="Limpar">
 
         </div> 
+        <div class="acoes">
+
+            <input class="btn-iniciar" onclick="salvarTempo()" type="submit" value="Salvar tempo">
+            <!-- <input class="btn-parar"   type="submit" value="Parar"> -->
+            <input class="btn-limpar" onclick="excluirTudo()"  type="button" value="Excluir tudo">
+
+        </div> 
+        <div class="mostrar_tempo">
+            <div class="caixa_time">
+                <p class="time_salvo"></p>
+                <!-- <input class="btn-excluir" onclick="excluirUm(this)" type="submit" value="Excluir"> -->
+            </div>
+        </div>
 
     </div>
     
